--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,6 @@
-html, body, #root {
+html,
+body,
+#root {
   position: fixed;
   top: 0;
   left: 0;
@@ -8,5 +10,5 @@ html, body, #root {
 }
 
 #root {
-  background-color: #111;
+  /* background-color: #111; */
 }
